Update Final Projected Rankings.ipynb
editing the interpretation of the Tau hypotheses and results

--- a/Projected Rankings/Final Projected Rankings.ipynb
+++ b/Projected Rankings/Final Projected Rankings.ipynb
@@ -980,11 +980,11 @@
    "source": [
     "Without spending too much time renaming variables in concordance to appropriate dates, we list the expected and observed final rankings. A column <code>diff</code> is the difference between the two columns. To test for a difference between the two columns, we develop the following 2 hypothesis:\n",
     "\n",
-    "$H_{0}:$ The two columns are the same.\n",
+    "$H_{0}:$ There is an absence of association between the 2 columns.\n",
     "<br>\n",
-    "$H_{A}:$ The two columns are different.\n",
+    "$H_{A}:$ There is an association between the 2 columns.\n",
     "\n",
-    "The null hypothesis assumes that the two columns are not statistically significant, and the alternative is that they are. To test this null hypothesis, we will use the Kendall rank correlation coefficient, or Kendall's Tau. This coefficient is used to measure the ordinal association between two quantities and thus perfect for the type of data we have. Kendall's Tau is implemented in <code>R</code> as such:"
+    "The null hypothesis assumes that the two columns are not statistically significantly the same, and the alternative is that they are. To test this null hypothesis, we will use the Kendall rank correlation coefficient, or Kendall's Tau. This coefficient is used to measure the ordinal association between two quantities and thus perfect for the type of data we have. Kendall's Tau is implemented in <code>R</code> as such:"
    ]
   },
   {
@@ -1071,9 +1071,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The resulting p-value (which uses the standard normal Z-table after converting the Tau value to a Z-value) is 0.1557. This is greater than the standard 0.05, which means we do not reject the null hypothesis. We instead assume it, that the two columns are indeed the same. So, ultimately ESPN predicted only one final rank correctly in Casey, and got 3/4 playoff teams (left out Sirpi).\n",
+    "The resulting p-value (which uses the standard normal Z-table after converting the Tau value to a Z-value) is 0.1557. This is greater than the standard 0.05, which means we do not reject the null hypothesis. We instead assume it, that the two columns are not the same: an abssence of association. So, ultimately ESPN predicted only one final rank correctly in Casey, and got 3/4 playoff teams (left out Sirpi).\n",
     "\n",
-    "I guess we can say not bad! But not phenomenal either."
+    "I guess we can say making the final predictions is difficult, especially when there are so many transactions and other variables that go on through the season. That being said, the variability we observe in some of those line graphs is certainly intriguing."
    ]
   },
   {
